--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,7 +4,7 @@
       { "src": "app.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/app.js" }
+      { "src": "/api/v1/(.*)", "dest": "/api/v1/$1" }
     ]
   }
   
